--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -336,8 +336,9 @@
     <!-- Placeholder image used in hotelReciept, Rooms&RatesListActivity -->
     <attr name="hotelImagePlaceHolderDrawable" format="reference" />
 
-    <!-- Text defined separately for VSC, in the CVV entry screen -->
-    <attr name="cvvEntryExplainationText" format="reference|string" />
+    <!-- Title displayed on the CVV entry screen (defined separately for VSC).
+    The first parameter, if defined, is the user-defined name of the card. -->
+    <attr name="cvvEntryTitleText" format="reference|string" />
 
     <!-- for hotels and flights travel type -->
     <attr name="travelerLabelOnCheckout" format="reference|string" />
