--- a/project/res/layout-sw600dp/fragment_sold_out.xml
+++ b/project/res/layout-sw600dp/fragment_sold_out.xml
@@ -11,9 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
-        android:textColor="@android:color/white"
-        app:textStyle="medium" />
+        android:textColor="#ffffff"
+        android:textSize="19sp"
+        app:textStyle="light" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,26 +24,15 @@
 
         <Button
             android:id="@+id/remove_sold_out_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TabletSoldOutButtonStyle"
             android:layout_below="@+id/sold_out_text_view"
-            android:layout_margin="25dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:padding="15dp"
-            android:textColor="@android:color/black" />
+            android:layout_marginRight="24dp" />
 
         <Button
             android:id="@+id/select_new_item_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TabletSoldOutButtonStyle"
             android:layout_below="@+id/sold_out_text_view"
-            android:layout_margin="25dp"
-            android:layout_toRightOf="@+id/remove_sold_out_button"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:padding="15dp"
-            android:textColor="@android:color/black" />
+            android:layout_toRightOf="@+id/remove_sold_out_button" />
     </LinearLayout>
 
 </LinearLayout>
