--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -88,6 +88,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="@string/trip_bucket_sold_out"
+                    android:textAllCaps="true"
                     android:textColor="#FFDB4C"
                     android:textSize="18sp"
                     app:textStyle="medium" />
