--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1093,4 +1093,15 @@
         <item name="android:textSize">15sp</item>
     </style>
 
+    <!-- Tablet Sold out screen, buttons style -->
+    <style name="TabletSoldOutButtonStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_height">51dp</item>
+        <item name="android:layout_width">247dp</item>
+        <item name="android:background">@drawable/btn_tablet_checkout_sold_out</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:textColor">#444444</item>
+    </style>
+
 </resources>
