--- a/project/res/layout/fragment_tablet_results_flights.xml
+++ b/project/res/layout/fragment_tablet_results_flights.xml
@@ -28,6 +28,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+    <!-- ADD TO TRIP SHADE - We set alpha on this view to create a fade effect-->
+    <View
+        android:id="@+id/flights_add_to_trip_shade"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#66000000"
+        android:visibility="invisible" />
+
     <!-- ADD TO TRIP -->
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flights_add_to_trip"
