--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -166,6 +166,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/amenities_container"
                 android:background="@color/tablet_white_pane_bg"
+                android:showDividers="middle"
+                android:divider="@drawable/room_rate_divider"
                 android:orientation="vertical"
                 android:visibility="invisible"/>
 
