2778, 2779 Hotel and flight sold out messaging. (Part 4)
Let's give the trip bucket cards visual boost to indicate if the card is "selected/currently being viewed"
by the user if the trip is sold out.
Gave it selected state which in turn either adds extra padding around the trip bucket card or removes it.

--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -25,6 +25,7 @@
 
         <RelativeLayout
             android:id="@+id/trip_bucket_item_top_container"
+            android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="@dimen/hotel_flight_card_height">
 
