--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -2,7 +2,7 @@
 <com.expedia.bookings.widget.RowRoomRateLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/hotel_room_rate_list_height"
     android:orientation="vertical"
     android:paddingLeft="@dimen/tablet_detail_padding"
     android:paddingRight="@dimen/tablet_detail_padding">
@@ -92,7 +92,8 @@
             android:id="@+id/room_rate_renovation_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="15dp"
+            android:visibility="gone">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/room_rate_renovation_notice_text"
@@ -111,7 +112,8 @@
             android:id="@+id/room_rate_resort_fees_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="15dp"
+            android:visibility="gone">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/room_rate_resort_fees_text"
