2838 #9 More add to trip bucket polish.
We were having some measurement issues.

--- a/project/res/layout/fragment_tripbucket.xml
+++ b/project/res/layout/fragment_tripbucket.xml
@@ -19,13 +19,13 @@
             android:id="@+id/trip_bucket_flight_trip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="invisible"/>
 
         <FrameLayout
             android:id="@+id/trip_bucket_hotel_trip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="invisible"/>
     </LinearLayout>
 
 </ScrollView>
