2778, 2779 Hotel and flight sold out messaging. (Part 5) Minor UI polish, desaturate sold out items. Introducing Mr.Frowny to empathize with the users.

--- a/project/res/layout-sw600dp/fragment_sold_out.xml
+++ b/project/res/layout-sw600dp/fragment_sold_out.xml
@@ -6,6 +6,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/sold_out_frowny" />
+
     <com.expedia.bookings.widget.TextView
         android:id="@+id/sold_out_text_view"
         android:layout_width="wrap_content"
