--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -212,4 +212,7 @@
     <color name="abs__bright_foreground_disabled_holo_dark">#ff4c4c4c</color>
     <color name="abs__bright_foreground_disabled_holo_light">#ffb2b2b2</color>
 
+    <!-- Trip Bucket Sold Out Overlays -->
+    <color name="trip_bucket_sold_out_selected">#660e4d8c</color>
+
 </resources>
