2778, 2779 Hotel and flight sold out messaging. (part 6) Add soldout-unselected overlay.

--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -214,5 +214,6 @@
 
     <!-- Trip Bucket Sold Out Overlays -->
     <color name="trip_bucket_sold_out_selected">#660e4d8c</color>
+    <color name="trip_bucket_sold_out_unselected">#cc525252</color>
 
 </resources>
