--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -2,132 +2,132 @@
 <com.expedia.bookings.widget.RowRoomRateLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/hotel_room_rate_list_height"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/tablet_detail_padding"
-    android:paddingRight="@dimen/tablet_detail_padding">
-
-    <include layout="@layout/snippet_tablet_room_rate_add_select"/>
-
-    <RelativeLayout
-        android:id="@+id/room_rate_detail_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/hotel_room_rate_detail_container_margin"
-        android:layout_marginTop="@dimen/hotel_room_rate_detail_container_margin"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/room_rate_image_view"
-            android:layout_width="@dimen/hotel_room_rate_thumbnail_width"
-            android:layout_height="@dimen/hotel_room_rate_thumbnail_height"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="24dp"
-            android:gravity="center"
-            android:scaleType="centerCrop"/>
-
-        <TextView
-            android:id="@+id/room_rate_discount_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignRight="@id/room_rate_image_view"
-            android:layout_alignTop="@id/room_rate_image_view"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/bg_sale_text_view"
-            android:paddingBottom="1dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="1dp"
-            android:singleLine="true"
-            android:textColor="@android:color/white"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/room_rate_image_view"
-            android:orientation="vertical">
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_urgency_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#008c5d"
-                android:textSize="16sp"
-                app:textStyle="bold"/>
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_description_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:textStyle="light"/>
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_refundable_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/non_refundable"
-                android:textColor="#666666"
-                android:textSize="16sp"
-                app:textStyle="bold"/>
-
-        </LinearLayout>
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/room_rate_center"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"/>
+    android:layout_height="@dimen/hotel_room_rate_list_height">
 
     <LinearLayout
-        android:id="@+id/notice_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/tablet_detail_padding"
+        android:paddingRight="@dimen/tablet_detail_padding">
 
-        <LinearLayout
-            android:id="@+id/room_rate_renovation_container"
+        <include layout="@layout/snippet_tablet_room_rate_add_select"/>
+
+        <RelativeLayout
+            android:id="@+id/room_rate_detail_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="@dimen/hotel_room_rate_detail_container_margin"
+            android:layout_marginTop="@dimen/hotel_room_rate_detail_container_margin"
             android:visibility="gone">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_renovation_notice_text"
-                style="@style/TabletRoomRateNoticeFeesText"
-                android:drawableLeft="@drawable/ic_renovation_tablet"
-                android:text="@string/property_undergoing_renovations"
-                app:textStyle="light"/>
+            <ImageView
+                android:id="@+id/room_rate_image_view"
+                android:layout_width="@dimen/hotel_room_rate_thumbnail_width"
+                android:layout_height="@dimen/hotel_room_rate_thumbnail_height"
+                android:layout_alignParentLeft="true"
+                android:layout_marginRight="24dp"
+                android:gravity="center"
+                android:scaleType="centerCrop"/>
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_renovation_more_info"
-                style="@style/TabletRoomRateNoticeMoreInfo"
-                app:textStyle="bold"/>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/room_rate_discount_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@id/room_rate_image_view"
+                android:layout_alignTop="@id/room_rate_image_view"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/bg_sale_text_view"
+                android:paddingBottom="1dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="1dp"
+                android:singleLine="true"
+                android:textColor="@android:color/white"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/room_rate_image_view"
+                android:orientation="vertical">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_urgency_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#008c5d"
+                    android:textSize="16sp"
+                    app:textStyle="bold"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_description_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    app:textStyle="light"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_refundable_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/non_refundable"
+                    android:textColor="#666666"
+                    android:textSize="16sp"
+                    app:textStyle="bold"/>
+
+            </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/room_rate_resort_fees_container"
+            android:id="@+id/notice_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:orientation="vertical"
             android:visibility="gone">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_resort_fees_text"
-                style="@style/TabletRoomRateNoticeFeesText"
-                android:drawableLeft="@drawable/ic_fees_tablet"
-                android:text="@string/property_undergoing_renovations"
-                app:textStyle="light"/>
+            <LinearLayout
+                android:id="@+id/room_rate_renovation_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:visibility="gone">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/room_rate_resort_fees_more_info"
-                style="@style/TabletRoomRateNoticeMoreInfo"
-                app:textStyle="bold"/>
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_renovation_notice_text"
+                    style="@style/TabletRoomRateNoticeFeesText"
+                    android:drawableLeft="@drawable/ic_renovation_tablet"
+                    android:text="@string/property_undergoing_renovations"
+                    app:textStyle="light"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_renovation_more_info"
+                    style="@style/TabletRoomRateNoticeMoreInfo"
+                    app:textStyle="bold"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/room_rate_resort_fees_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:visibility="gone">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_resort_fees_text"
+                    style="@style/TabletRoomRateNoticeFeesText"
+                    android:drawableLeft="@drawable/ic_fees_tablet"
+                    android:text="@string/property_undergoing_renovations"
+                    app:textStyle="light"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_resort_fees_more_info"
+                    style="@style/TabletRoomRateNoticeMoreInfo"
+                    app:textStyle="bold"/>
+            </LinearLayout>
+
         </LinearLayout>
-
     </LinearLayout>
 
 </com.expedia.bookings.widget.RowRoomRateLayout>
