--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1096,7 +1096,7 @@
     <!-- Tablet Sold out screen, buttons style -->
     <style name="TabletSoldOutButtonStyle">
         <item name="android:textSize">18sp</item>
-        <item name="android:layout_height">51dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">247dp</item>
         <item name="android:background">@drawable/btn_tablet_checkout_sold_out</item>
         <item name="android:gravity">center</item>
