Added preliminary launch pin detail fragment

--- a/project/res/layout/activity_tablet_launch.xml
+++ b/project/res/layout/activity_tablet_launch.xml
@@ -51,4 +51,10 @@
         android:layout_height="match_parent"
         android:visibility="invisible" />
 
+    <FrameLayout
+        android:id="@+id/pin_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
+
 </FrameLayout>
