--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -21,6 +21,10 @@
         app:headerSpacePercentage="0.5"
         app:headerSpacerColor="@android:color/transparent" />
 
+    <!-- Empty List View -->
+    <include
+        android:id="@android:id/empty" layout="@layout/include_tablet_search_missing_layout"/>
+
     <!-- The sticky header view -->
 
 
