Related to 2921, 2836     Fallback scenarios - no flight/hotel available (Part3)
Let's style common layout attributes.
Fixed layout dimens on N7, for both landscape and portrait.

--- a/project/res/drawable/bg_tablet_search_results_empty.xml
+++ b/project/res/drawable/bg_tablet_search_results_empty.xml
@@ -4,7 +4,7 @@
     <item>
         <color android:color="#00FFFFFF" />
     </item>
-    <item android:top="307dp">
+    <item android:top="@dimen/tablet_empty_search_result_bg_top">
 
         <shape>
             <solid android:color="@color/tablet_white_pane_bg" />
