--- a/project/res/values-sw800dp-port/dimens.xml
+++ b/project/res/values-sw800dp-port/dimens.xml
@@ -3,4 +3,8 @@
 
     <dimen name="hotel_checkout_overview_width">@dimen/standard_content_width</dimen>
 
+    <!-- Tablet Empty Search Result related dimens -->
+    <dimen name="tablet_empty_search_result_bg_top">547dp</dimen>
+    <dimen name="tablet_empty_search_result_text_bottom_margin">232dp</dimen>
+
 </resources>
