--- a/project/res/layout/fragment_results_list_search_error.xml
+++ b/project/res/layout/fragment_results_list_search_error.xml
@@ -1,20 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center|bottom"
     android:background="#FFFFFF"
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:src="@drawable/ic_error" />
-
-    <TextView
-        android:id="@+id/error_tv"
+        android:id="@+id/search_error_img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/search_error" />
+        android:layout_height="wrap_content" />
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/error_tv"
+        style="@style/TabletSearchResultEmptyText"
+        app:textStyle="condensed"/>
 
 </LinearLayout>
