--- a/project/res/layout/snippet_tablet_launch_map_pin.xml
+++ b/project/res/layout/snippet_tablet_launch_map_pin.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.LaunchPin xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal|bottom" />
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/launch_pin_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/launch_pin_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|bottom" />
+
+</com.expedia.bookings.widget.LaunchPin>
