--- a/project/res/layout/snippet_tablet_launch_map_pin.xml
+++ b/project/res/layout/snippet_tablet_launch_map_pin.xml
@@ -3,15 +3,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.expedia.bookings.widget.RoundImageView
         android:id="@+id/launch_pin_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="@dimen/launch_pin_size"
+        android:layout_height="@dimen/launch_pin_size"
+        android:layout_gravity="center_horizontal" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/launch_pin_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal|bottom" />
+        android:layout_marginTop="@dimen/launch_pin_size"
+        android:layout_gravity="center_horizontal|bottom" />
 
 </com.expedia.bookings.widget.LaunchPin>
