Tablet launch map improvements - pin details
Use a round image for the pin detail view.

--- a/project/res/layout/fragment_tablet_launch_pin_detail.xml
+++ b/project/res/layout/fragment_tablet_launch_pin_detail.xml
@@ -52,7 +52,7 @@
     </LinearLayout>
 
     <!-- Keep this on top, in the z-order, for animation -->
-    <ImageView
+    <com.expedia.bookings.widget.RoundImageView
         android:id="@+id/round_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
