--- a/project/res/layout/activity_tablet_launch.xml
+++ b/project/res/layout/activity_tablet_launch.xml
@@ -2,5 +2,4 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"/>
+    android:layout_height="match_parent" />
