--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -89,6 +89,7 @@
     </style>
 
     <style name="V2.Theme.Activity.TabletLaunch" tools:targetApi="11">
+        <item name="android:windowBackground">@color/tablet_launch_bg</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
     </style>
