--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -117,11 +117,12 @@
 
     <style name="V2.Widget" />
 
-    <style name="V2.Widget.ActionBar" parent="@android:style/Widget.Holo.ActionBar" tools:targetApi="11" />
+    <style name="V2.Widget.ActionBar" parent="@android:style/Widget.Holo.ActionBar" tools:targetApi="11">
+        <item name="android:logo">@drawable/ic_action_bar_dark</item>
+    </style>
 
     <style name="V2.Widget.ActionBar.TabletLaunch" tools:targetApi="11">
         <item name="android:background">@drawable/ab_transparent_dark_blue</item>
-        <item name="android:logo">@drawable/ab_logo_tablet_launch</item>
         <item name="android:windowContentOverlay">@drawable/ab_shadow_tablet_launch</item>
         <item name="android:displayOptions">showHome|useLogo</item>
     </style>
@@ -133,7 +134,6 @@
 
     <style name="V2.Widget.ActionBar.TabletCheckout" parent="@android:style/Widget.Holo.Light.ActionBar" tools:targetApi="14">
         <item name="android:background">@color/tablet_checkout_light</item>
-        <item name="android:logo">@drawable/ic_action_bar_light</item>
         <item name="android:displayOptions">showHome|useLogo|showTitle|homeAsUp</item>
         <item name="android:titleTextStyle">@style/V2.Widget.ActionBar.TitleTextStyle</item>
     </style>
