2838 #16 - This finishes up the add to bucket animation for flights.
This commit makes certain that the destination rect we are flying our animation row to in the trip bucket is
sized and positioned correctly every time.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -27,6 +27,7 @@
 
     <dimen name="tablet_hotel_details_vertical_padding">64dp</dimen>
     <fraction name="tablet_hotel_details_horizontal_spacing_percentage">14%</fraction>
+    <dimen name="bucket_top_margin">14dp</dimen>
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
