--- a/project/res/layout/fragment_tripbucket.xml
+++ b/project/res/layout/fragment_tripbucket.xml
@@ -9,7 +9,7 @@
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="@dimen/bucket_top_margin"
         android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
         android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
         android:orientation="vertical"
