--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -49,7 +49,7 @@
         android:layout_height="match_parent"
         android:visibility="invisible" />
 
-    <FrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/pin_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
