--- a/project/res/layout/fragment_tablet_launch_pin_detail.xml
+++ b/project/res/layout/fragment_tablet_launch_pin_detail.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,29 +26,37 @@
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="36sp"
+            android:textColor="#ffffff"
+            android:textSize="32sp"
             android:includeFontPadding="false"
             android:textAllCaps="true"
+            android:textStyle="bold"
             android:text=""/>
 
-        <TextView
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/text_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="12dp"
+            android:includeFontPadding="false"
+            android:textColor="#ffffff"
+            android:textSize="16sp"
+            app:textStyle="light"
             android:text=""/>
 
         <TextView
             android:id="@+id/button_book_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:background="#000080"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:paddingLeft="41dp"
+            android:paddingRight="41dp"
+            android:paddingTop="11dp"
+            android:paddingBottom="13dp"
+            android:includeFontPadding="false"
+            android:background="@drawable/btn_tablet_launch_screen"
+            android:textColor="#3e69b3"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:text="@string/book_now"/>
     </LinearLayout>
