--- a/project/res/layout/widget_collection_stack.xml
+++ b/project/res/layout/widget_collection_stack.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/back_image_view"
@@ -24,5 +24,14 @@
         android:layout_marginTop="@dimen/destination_search_tile_text_margin_top"
         android:background="#AA000000"
         android:gravity="center" />
+
+    <ImageView
+        android:id="@+id/checkmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_booking_complete_check"
+        android:alpha="132"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </merge>
