--- a/project/res/layout/widget_collection_stack.xml
+++ b/project/res/layout/widget_collection_stack.xml
@@ -20,9 +20,7 @@
         android:id="@+id/text"
         android:layout_width="@dimen/destination_search_tile_width"
         android:layout_height="@dimen/destination_stack_text_container_height"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="@dimen/destination_search_tile_text_margin_top"
-        android:background="#AA000000"
+        android:layout_gravity="center|bottom"
         android:gravity="center" />
 
     <ImageView
