--- a/project/res/layout/widget_collection_stack.xml
+++ b/project/res/layout/widget_collection_stack.xml
@@ -30,6 +30,7 @@
         android:src="@drawable/ic_booking_complete_check"
         android:alpha="132"
         android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
         android:visibility="gone" />
 
 </merge>
