--- a/project/res/layout/fragment_tablet_launch_pin_detail.xml
+++ b/project/res/layout/fragment_tablet_launch_pin_detail.xml
@@ -46,7 +46,7 @@
             android:text=""/>
 
         <TextView
-            android:id="@+id/button_book_now"
+            android:id="@+id/button_explore_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="41dp"
@@ -58,7 +58,7 @@
             android:textColor="#3e69b3"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:text="@string/book_now"/>
+            android:text="@string/explore_now"/>
     </LinearLayout>
 
     <!-- Keep this so we can animate the ImageView to this target -->
