--- a/project/res/layout/section_credit_card.xml
+++ b/project/res/layout/section_credit_card.xml
@@ -104,7 +104,7 @@
             android:layout_marginTop="4dp"
             android:background="#24ffffff" />
 
-        <TextView
+        <com.expedia.bookings.widget.AutoResizeTextView
             android:id="@+id/signature_text_view"
             style="@style/CvvScreenCreditCardSignature"
             android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
             android:singleLine="true"
             android:textColor="#BEB2C2"
             android:textScaleX=".8"
-            android:textSize="20dp" />
+            app:minTextSize="5sp" />
     </FrameLayout>
 
     <View
