Better launch pin animation
Don't show the pin and text until the bitmap has been loaded :)

--- a/project/res/layout/snippet_tablet_launch_map_pin.xml
+++ b/project/res/layout/snippet_tablet_launch_map_pin.xml
@@ -7,13 +7,15 @@
         android:id="@+id/launch_pin_image_view"
         android:layout_width="@dimen/launch_pin_size"
         android:layout_height="@dimen/launch_pin_size"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible"/>
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/launch_pin_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/launch_pin_size"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:visibility="invisible"/>
 
 </com.expedia.bookings.widget.LaunchPin>
