--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -8,7 +8,7 @@
 
     <!-- Names of the open source libraries we use -->
     <!-- The translators should not translate these proper names and when they came back from loc they didn't touch them anyways -->
-    <string name="open_source_names">ActionBarSherlock 4.4.0, NineOldAndroids 2.4.0, DiskLruCache 2.0.2, JodaTime 2.3</string>
+    <string name="open_source_names">DiskLruCache 2.0.2, JodaTime 2.3, ActiveAndroid, OkHttp 2.0, Otto 1.3.4, Gson 2.2.4</string>
 
     <!-- Template for time - distance.  E.g., "9h 40m - 5,5000 miles" -->
     <string name="time_distance_TEMPLATE"> &lt;b&gt;%1$s&lt;/b&gt; - %2$s</string>
