2838 #18 - Make the top corners invisible too.
Apparently Akshaya was seeing a bad white line at the top of the flight card as it animates into the trip bucket.

I wasn't able to repro, but Im hoping it was just the same issue as the bottom corners, so hiding them should hopefully fix.

--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -143,6 +143,7 @@
         </RelativeLayout>
 
         <View
+            android:id="@+id/card_corners_top"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_gravity="top"
