--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -646,11 +646,7 @@
         <item name="android:background">#D1D1D1</item>
     </style>
 
-    <style name="Aosp.Widget.Holo.Light.Spinner.DropDown.ActionBar" parent="@android:style/Widget.Holo.Light.Spinner">
-        <item name="android:background">@drawable/spinner_ab_holo_light</item>
-    </style>
-
-    <style name="Widget.Spinner.Phone" parent="Aosp.Widget.Holo.Light.Spinner.DropDown.ActionBar">
+    <style name="Widget.Spinner.Phone" parent="@android:style/Widget.Holo.Light.Spinner">
         <item name="android:background">@drawable/spinner_holo_light</item>
         <item name="android:minHeight">40dp</item>
         <item name="android:maxHeight">40dp</item>
@@ -661,11 +657,11 @@
         <item name="android:textColor">@color/text_color_dark</item>
     </style>
 
-    <style name="Widget.Spinner.Phone.Flights" parent="Aosp.Widget.Holo.Light.Spinner.DropDown.ActionBar">
+    <style name="Widget.Spinner.Phone.Flights" parent="@android:style/Widget.Holo.Light.Spinner">
         <item name="android:background">@drawable/spinner_holo_light</item>
     </style>
 
-    <style name="Widget.Spinner.Tablet" parent="Aosp.Widget.Holo.Light.Spinner.DropDown.ActionBar">
+    <style name="Widget.Spinner.Tablet" parent="@android:style/Widget.Holo.Light.Spinner">
         <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
         <item name="android:minHeight">40dp</item>
         <item name="android:maxHeight">40dp</item>
