--- a/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
+++ b/project/res/layout-sw600dp/section_hotel_edit_traveler.xml
@@ -37,32 +37,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="40dp"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal">
-
-                <com.expedia.bookings.widget.TelephoneSpinner
-                    android:id="@+id/edit_phone_number_country_code_spinner"
-                    style="@style/Widget.Spinner.Tablet"
-                    app:text_view_layout="@layout/simple_spinner_item_18"
-                    android:layout_width="96dp"
-                    android:layout_height="40dp"
-                    />
+                android:layout_gravity="bottom">
 
                 <EditText
                     android:id="@+id/edit_phone_number"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_gravity="bottom"
+                    android:paddingLeft="60dp"
                     android:hint="@string/phone_number_hint"
                     android:inputType="phone"
-                    android:singleLine="true"
-                    />
-            </LinearLayout>
+                    android:singleLine="true"/>
+
+                <com.expedia.bookings.widget.TelephoneSpinner
+                    android:id="@+id/edit_phone_number_country_code_spinner"
+                    style="@style/Widget.Spinner.Tablet.CountryCode"
+                    android:layout_width="56dp"
+                    android:layout_height="40dp"
+                    app:text_view_layout="@layout/simple_spinner_item_18"/>
+            </FrameLayout>
 
             <EditText
                 android:id="@+id/edit_email_address"
