Launch collection stacks: made them parallax in the opposite direction

--- a/project/res/layout/fragment_destination_stacks.xml
+++ b/project/res/layout/fragment_destination_stacks.xml
@@ -11,7 +11,8 @@
         android:layout_height="@dimen/destination_search_stack_height"
         android:clipChildren="false"
         android:divider="@drawable/destinations_divider"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:showDividers="beginning|end|middle">
 
     </LinearLayout>
 
